# bankscope

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
bankscope/: _version.py  cli.py  constants.py
